--- a/package.json
+++ b/package.json
@@ -1,30 +1,51 @@
 {
-  "name": "it-repair-system",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@vonage/server-sdk": "^3.20.0",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.1",
-    "cors": "^2.8.5",
-    "docx": "^9.3.0",
-    "docx-templates": "^4.14.1",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.14.0",
-    "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9",
-    "pdfkit": "^0.16.0",
-    "react-quill": "^2.0.0"
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
+    "cross-env": "^7.0.3",
+    "print-js": "^1.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^7.1.5",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  "description": ""
+"scripts": {
+   "start": "cross-env HTTPS=true SSL_CRT_FILE=C:/IT-Repair-System/ncc-workshop-01_ad_newrycomputercentre_co_uk.crt SSL_KEY_FILE=C:/IT-Repair-System/ncc-workshop-01.ad.newrycomputercentre.co.uk.key HOST=ncc-workshop-01.ad.newrycomputercentre.co.uk PORT=3000 react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.7",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "^4.0.7"
+  }
 }
